--- a/Trang thống kê/base.css
+++ b/Trang thống kê/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --color-one: #AD171C;
+    --color-one: rgb(210, 20, 20);
     --color-text: black;
 
     --font: 'Roboto', sans-serif;
@@ -13,7 +13,15 @@ body {
     font-family: var(--font);
     font-size: 18px;
 }
-
+#ten-he-thong{
+    text-align: center;
+    color: white;
+    font-size: 30px;
+    line-height: 80px;
+    border: 0.5px black solid;
+    background-color: rgb(210, 20, 20);
+    text-shadow: 2px 2px 1px black;
+}
 
 a {
     color: var(--color-one);
