--- a/Dashboard admin/css/dinhdang1.css
+++ b/Dashboard admin/css/dinhdang1.css
@@ -20,7 +20,7 @@ body{
     font-size: 30px;
     line-height: 80px;
     border: 0.5px black solid;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     text-shadow: 2px 2px 1px black;
 }
 #chuc-nang{
@@ -42,7 +42,7 @@ a{
     background-color: white;
 }
 #danh-sach-de-thi{
-    color: rgb(210, 20, 20);
+    color: #AD171C;
     font-weight: bold;
     font-size: 20px;
     text-shadow: 1px 0px 1px wheat;
@@ -53,7 +53,7 @@ a{
     width: 100%;
 }
 #tao-moi{
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     border: 1px solid black;
     border-radius: 5px;
     width: 80px;
@@ -61,7 +61,7 @@ a{
     color: white;
 }
 #nut-xoa{
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     border: 1px solid black;
     border-radius: 5px;
     width: 130px;
@@ -78,7 +78,7 @@ a{
 }
 #khoang-trong{
     height: 1px;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
 }
 #input-tim-kiem{
     width: 80%;
@@ -99,10 +99,10 @@ table{
 }
 button{
     border: 1px solid black;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
 }
 thead{
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     color: white;
 }
 /*dinh dang khi doi tuong duoc chon,re chuot,vân vân... */
