--- a/Dashboard admin/css/dinhdang2_thongke.css
+++ b/Dashboard admin/css/dinhdang2_thongke.css
@@ -20,11 +20,11 @@ body{
     font-size: 30px;
     line-height: 80px;
     border: 0.5px black solid;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     text-shadow: 2px 2px 1px black;
 }
 #chi-tiet{
-    color: rgb(210, 20, 20);
+    color: #AD171C;
     text-decoration: underline;
 }
 #chuc-nang{
@@ -53,7 +53,7 @@ a{
 }
 #khoang-trong{
     height: 1px;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
 }
 #bang-de{
     /* border: 1px solid red; */
@@ -75,7 +75,7 @@ table{
     text-transform: uppercase;
 }
 thead{
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     color: white;
 }
 /*dinh dang khi doi tuong duoc chon,re chuot,vân vân... */
