--- a/Trang xem kq của từng sinh viên/base.css
+++ b/Trang xem kq của từng sinh viên/base.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --color-one:rgb(210, 20, 20);
+    --color-one:#AD171C;
     --color-text: black;
 
     --font: 'Roboto', sans-serif;
@@ -64,6 +64,6 @@ p {
     font-size: 30px;
     line-height: 80px;
     border: 0.5px black solid;
-    background-color: rgb(210, 20, 20);
+    background-color: #AD171C;
     text-shadow: 2px 2px 1px black;
 }
